[package]
name = "axway-api-adapter-rs"
version = "0.1.0"
authors = ["guillaume.mazollier@soprabanking.com <guillaume.mazollier@soprabanking.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdrs = "2.3"
cdrs_helpers_derive = "0.3"
actix-web = "3"
serde = "1.0"
