[package]
name = "axway-api-adapter-rs"
version = "0.1.0"
authors = ["guillaume.mazollier@soprabanking.com <guillaume.mazollier@soprabanking.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-web = "3.3.2"
async-trait = "0.1.42"
anyhow = "1.0.34"
cdrs = "2.3"
cdrs_helpers_derive = "0.3"
itertools = "0.9.0"
redis = "0.18.0"
r2d2 = "0.8"
r2d2_redis = "0.13.0"
serde = "1.0"
serde_json = "1.0.60"
tokio = { version = "0.3", features = ["full"] }